change Movie, Player,Tuple class, and delete orginial connectionvalidator and gamecontroller class